Bug 403480: make it impossible to set nsIURI::port to it's default value, r+sr=biesi, a=schrep